--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Hello world!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+
+</head>
+<body>
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GA_TRACKING_ID');
+</script>
+</body>
+</html>
