--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 </head>
 <body>
+<h1>Hello world!</h1>
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
 <script>
@@ -11,7 +12,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_TRACKING_ID');
+  gtag('config', 'UA-135271107-1');
 </script>
 </body>
 </html>
