added a row below

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,6 +48,7 @@
 
         <div class="section" id="intro">
             <h2>Contact Us</h2>
+            <p>Do you have any comments, enquiries, and/or questions? <br>  We'd love to hear from you!</p>
             <div>
                 <form id ="contact-form" action="">
                     <label for="fname">First Name</label><br>
@@ -59,7 +60,7 @@
                     <label for="email">Email</label><br>
                     <input type="text" id="email" name="email" placeholder="Eg. johnsmith@gmail.com"><br>
 
-                    <label for="questions">Questions</label><br>
+                    <label for="questions"></label>Questions and Comments<br>
                     <textarea id="subject" name="questions" placeholder="What would you like to ask us?" style="height:200px"></textarea><br>
 
                     <input type="submit" onclick="submitInfo()" value="Submit">
