attempted some more styling

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div id="body" class="main">
 
-        <section>
+        <section class="light">
             <div class="container">
                 <div class="row subheading text-center">
                     <h2 class="section-header text-center">Our Apps</h2>
@@ -77,24 +77,42 @@
 
                 <div class="row text-center">
                     <div class="col-md-4">
+                        <h3 class="app-title text-center">QuizDB</h3>
                         <img src="/assets/quizdb.png" alt="QuizDB for iOS" height="150" width="150">
-                        <h4 class="service-heading text-center">QuizDB</h4>
-                        <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted text-center"></p>A mobile client for the QuizDB searchable question database
                     </div>
                     <div class="col-md-4">
+                        <h3 class="app-title text-center">Tak</h3>
                         <img src="/assets/tak.png" alt="Tak for iOS" height="150" width="150">
-                        <h4 class="service-heading">Tak</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">A 3D mobile edition of Tak, a strategy game created by James Ernest and Patrick Rothfuss</p>
                     </div>
                     <div class="col-md-4">
+                        <h3 class="app-title text-center">Saga Reader</h3>
                         <img src="/assets/question_mark.jpg" alt="Saga Reader" height="150" width="150">
-                        <h4 class="service-heading">Saga Reader</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">A better mobile reading experience, featuring auto-scrolling and reading statistics</p>
                     </div>
                 </div>
             </div>
-
         </section>
+
+        <section class="dark text-center" id="footer">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-sm-6">
+                        <a src="technaplex.com" class="text-muted text-center">Contact</a>
+                    </div>
+                    <div class="col-sm-6">
+                        <a src="technaplex.com" class="text-muted">Legal</a>
+                    </div>
+                </div>
+                <div class="row text-center">
+
+                </div>
+            </div>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;© 2018-2019 Technaplex</p>
+        </section>
+
+        <!--
 
         <div id="appcards" class="container section">
             <div class="row">
@@ -125,7 +143,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
 
 </body></html>
