--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div id="body" class="main">
 
-        <section class="light">
+        <section class="light body-section">
             <div class="container">
                 <div class="row subheading text-center">
                     <h2 class="section-header text-center">Our Apps</h2>
@@ -77,35 +77,35 @@
 
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <h3 class="app-title text-center">QuizDB</h3>
-                        <img src="/assets/quizdb.png" alt="QuizDB for iOS" height="150" width="150">
-                        <p class="text-muted text-center"></p>A mobile client for the QuizDB searchable question database
+                        <h3 class="app-title text-center"><a href="pages/quizdbmobile.html" class="text-muted text-center">QuizDB</a></h3>
+                        <a href="pages/quizdbmobile.html" class="text-muted text-center"><img src="/assets/quizdb.png" alt="QuizDB for iOS" height="150" width="150"></a>
+                        <p class="text-muted text-center">An innovative mobile client for the QuizDB searchable question database</p>
                     </div>
                     <div class="col-md-4">
-                        <h3 class="app-title text-center">Tak</h3>
-                        <img src="/assets/tak.png" alt="Tak for iOS" height="150" width="150">
-                        <p class="text-muted">A 3D mobile edition of Tak, a strategy game created by James Ernest and Patrick Rothfuss</p>
+                        <h3 class="app-title text-center"><a href="pages/tak.html" class="text-muted text-center">Tak</a></h3>
+                        <a href="pages/tak.html" class="text-muted text-center"><img src="/assets/tak.png" alt="Tak for iOS" height="150" width="150"></a>
+                        <p class="text-muted">A 3D mobile edition of Tak, the strategy game created by James Ernest and Patrick Rothfuss</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="app-title text-center">Saga Reader</h3>
                         <img src="/assets/question_mark.jpg" alt="Saga Reader" height="150" width="150">
-                        <p class="text-muted">A better mobile reading experience, featuring auto-scrolling and reading statistics</p>
+                        <p class="text-muted">A better mobile reading experience in development, featuring auto-scrolling and reading statistics</p>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="dark text-center" id="footer">
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-sm-6">
-                        <a src="technaplex.com" class="text-muted text-center">Contact</a>
+            <div class="dark container">
+                <div class="dark row text-center">
+                    <div class="dark col-sm-6">
+                        <a href="www.technaplex.com" class="text-muted text-center">Legal</a>
                     </div>
-                    <div class="col-sm-6">
-                        <a src="technaplex.com" class="text-muted">Legal</a>
+                    <div class="dark col-sm-6">
+                        <a href="www.technaplex.com" class="text-muted">Privacy Policy</a>
                     </div>
                 </div>
-                <div class="row text-center">
+                <div class="dark row text-center">
 
                 </div>
             </div>
