--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                 <div class="row text-center">
                     <div class="col-md-4">
                         <h3 class="app-title text-center"><a href="pages/quizdbmobile.html" class="text-muted text-center">QuizDB</a></h3>
-                        <a href="pages/quizdbmobile.html" class="text-muted text-center"><img src="/assets/quizdb.png" alt="QuizDB for iOS" height="150" width="150"></a>
+                        <a href="pages/quizdbmobile.html" class="text-muted text-center"><img class="app-image" src="/assets/quizdb.png" alt="QuizDB for iOS" height="150" width="150"></a>
                         <p class="text-muted text-center">An innovative mobile client for the QuizDB searchable question database</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="app-title text-center"><a href="pages/tak.html" class="text-muted text-center">Tak</a></h3>
-                        <a href="pages/tak.html" class="text-muted text-center"><img src="/assets/tak.png" alt="Tak for iOS" height="150" width="150"></a>
+                        <a href="pages/tak.html" class="text-muted text-center"><img class="app-image" src="/assets/tak.png" alt="Tak for iOS" height="150" width="150"></a>
                         <p class="text-muted">A 3D mobile edition of Tak, the strategy game created by James Ernest and Patrick Rothfuss</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="app-title text-center">Saga Reader</h3>
-                        <img src="/assets/question_mark.jpg" alt="Saga Reader" height="150" width="150">
+                        <img class="app-image" src="/assets/question_mark.jpg" alt="Saga Reader" height="150" width="150">
                         <p class="text-muted">A better mobile reading experience in development, featuring auto-scrolling and reading statistics</p>
                     </div>
                 </div>
