--- a/pages/quizdbmobile.html
+++ b/pages/quizdbmobile.html
@@ -1,71 +1,102 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="author" content="Technaplex" />
-        <title>Technaplex | Home</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <!--CSS styles -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-        <link href="../assets/custom.css" rel="stylesheet" />
 
-        <!-- JavaScript -->
-        <script src="../assets/js/jquery-3.3.1.js"></script>
-        <script src="../assets/js/main.js"></script>
-        <script>
-            function submitInfo() {
-                alert("Thank you for your interest!");
-            }
-        </script>
-        
-        <!-- Global Site Tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-135271107-1');
-        </script>
-    </head>
-    <body>
-        <header id="site-header">
-            <div class="site-header-toprow">
-                <a class="site-logo" href="index.html">Technaplex</a>
+<head>
+    <meta charset="utf-8" />
+    <meta name="author" content="Technaplex" />
+    <title>Technaplex | Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!--CSS styles -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../assets/custom.css" rel="stylesheet" />
 
-                <nav id="site-nav">
-                    <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
-                    <div class="site-nav-wrapper">
-                        <a href="../index.html">Home</a>
-                        <a href="#"  class="active">QuizDB Mobile</a>
-                        <a href="tak.html">Tak</a>
-                        <a href="contact.html">Contact Us</a>
-                    </div>
-                </nav>
+    <!-- JavaScript -->
+    <script src="../assets/js/jquery-3.3.1.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/main.js"></script>
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-135271107-1');
+
+    </script>
+    <script>
+        $("#carousel").carousel();
+
+    </script>
+</head>
+
+<body>
+    <header id="site-header">
+        <div class="site-header-toprow">
+            <a class="site-logo" href="index.html">Technaplex</a>
+
+            <nav id="site-nav">
+                <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
+                <div class="site-nav-wrapper">
+                    <a href="../index.html">Home</a>
+                    <a href="#" class="active">QuizDB Mobile</a>
+                    <a href="tak.html">Tak</a>
+                    <a href="contact.html">Contact Us</a>
+                </div>
+            </nav>
+
+        </div>
+    </header>
+
+    <div id="myCarousel" class="carousel slide intro" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+            <li data-target="#myCarousel" data-slide-to="5"></li>
+        </ol>
+
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <img class="carousel-app-image" src="/assets/quizdb/quizdb_home.PNG" alt="QuizDB Home">
             </div>
-        </header>
 
-        <div class="section" id="intro">
-            <h2>Contact Us</h2>
-            <div>
-                <form id ="contact-form" action="">
-                    <label for="fname">First Name</label><br>
-                    <input type="text" id="fname" name="firstname" placeholder="Eg. John"><br>
+            <div class="carousel-item">
+                <img class="carousel-app-image" src="/assets/quizdb/malcolm_x.PNG" alt="Malcolm X">
+            </div>
 
-                    <label for="lname">Last Name</label><br>
-                    <input type="text" id="lname" name="lastname" placeholder="Eg. Smith"><br>
+            <div class="carousel-item">
+                <img class="carousel-app-image" src="/assets/quizdb/history.PNG" alt="History">
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-app-image" src="/assets/quizdb/random_tossups.PNG" alt="Random Tossups">
+            </div>
 
-                    <label for="email">Email</label><br>
-                    <input type="text" id="email" name="email" placeholder="Eg. johnsmith@gmail.com"><br>
+            <div class="carousel-item">
+                <img class="carousel-app-image" src="/assets/quizdb/random_bonuses.PNG" alt="Random Bonuses">
+            </div>
 
-                    <label for="questions">Questions</label><br>
-                    <textarea id="subject" name="questions" placeholder="What would you like to ask us?" style="height:200px"></textarea><br>
-
-                    <input type="submit" onclick="submitInfo()" value="Submit">
-                </form>
+            <div class="carousel-item">
+                <img class="carousel-app-image" src="/assets/quizdb/anki_dark.PNG" alt="Anki Carder">
             </div>
         </div>
-    </body>
-</html>
 
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</body>
+
+</html>
