added empty legal and privacy pages

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             <div class="dark container">
                 <div class="dark row text-center">
                     <div class="dark col-sm-6">
-                        <a href="www.technaplex.com" class="text-muted text-center">Legal</a>
+                        <a href="pages/legal.html" class="text-muted text-center">Legal</a>
                     </div>
                     <div class="dark col-sm-6">
-                        <a href="www.technaplex.com" class="text-muted">Privacy Policy</a>
+                        <a href="pages/privacy.html" class="text-muted">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="dark row text-center">
