--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 <body>
     <header id="splash">
-        <h1>Welcome to Technaplex</h1>
-        <p>Tomorrow's technology today</p>
+        <h1 class="text-center">Welcome to Technaplex</h1>
+        <p class="text-center">Tomorrow's technology today</p>
         <span id="down">&#8595;</span>
     </header>
 
