added kevins art

--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
 
 <body>
     <header id="splash">
-        <h1 class="text-center">Welcome to Technaplex</h1>
-        <p class="text-center">Tomorrow's technology today</p>
+        <h1 class="text-center splash-light">Welcome to Technaplex</h1>
+        <p class="text-center splash-dim">Tomorrow's technology today</p>
         <span id="down">&#8595;</span>
     </header>
 
     <nav id="site-header">
         <div class="site-header-toprow">
-            <a class="site-logo" href="index.html">Technaplex</a>
+            <a class="site-logo" href="index.html">
+                <img id="site-logo-obj" src="assets/navlogo.jpg" />
+            </a>
 
             <nav id="site-nav">
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
