--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -36,7 +36,9 @@
 <body>
     <header id="site-header">
         <div class="site-header-toprow">
-            <a class="site-logo" href="index.html">Technaplex</a>
+            <a class="site-logo" href="../index.html">
+                <img id="site-logo-obj" src="../assets/navlogo.jpg" />
+            </a>
 
             <nav id="site-nav">
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
