Add terms and conditions, project statuses, temporarily remove Contact Us link
Remove some useless javascript as well

--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
                     <div class="col-md-4">
                         <h3 class="app-title text-center"><a href="pages/quizdbmobile.html" class="text-muted text-center">QuizDB</a></h3>
                         <a href="pages/quizdbmobile.html" class="text-muted text-center"><img class="app-image" src="/assets/quizdb.png" alt="QuizDB for iOS" height="150" width="150"></a>
-                        <p class="text-muted text-center">An innovative mobile client for the QuizDB searchable question database</p>
+                        <p class="text-muted text-center">An innovative mobile client for the QuizDB searchable question database.</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="app-title text-center"><a href="pages/tak.html" class="text-muted text-center">Tak</a></h3>
                         <a href="pages/tak.html" class="text-muted text-center"><img class="app-image" src="/assets/tak.png" alt="Tak for iOS" height="150" width="150"></a>
-                        <p class="text-muted">A 3D mobile edition of Tak, the strategy game created by James Ernest and Patrick Rothfuss</p>
+                        <p class="text-muted">A 3D mobile edition of Tak, the strategy game created by James Ernest and Patrick Rothfuss. Currently unreleased due to licensing concerns.</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="app-title text-center">Saga Reader</h3>
                         <img class="app-image" src="/assets/question_mark.jpg" alt="Saga Reader" height="150" width="150">
-                        <p class="text-muted">A better mobile reading experience in development, featuring auto-scrolling and reading statistics</p>
+                        <p class="text-muted">A better mobile reading experience in development, featuring auto-scrolling and reading statistics. Currently in development.</p>
                     </div>
                 </div>
             </div>
@@ -113,39 +113,6 @@
             </div>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;© 2018-2019 Technaplex</p>
         </section>
-
-        <!--
-
-        <div id="appcards" class="container section">
-            <div class="row">
-                <div id="qc" class="blog-card spring-fever col-lg-3">
-                    <div class="title-content">
-                        <h3>QuizDB Mobile</h3>
-                        <hr />
-                        <div id="qci" class="intro-card">An Offline Searchable Quizbowl Database</div>
-                    </div>
-                    <div class="card-info">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-                    </div>
-                    <div class="gradient-overlay"></div>
-                    <div class="color-overlay"></div>
-                </div>
-                <div class="card-spacer"></div>
-                <div id="tc" class="blog-card spring-fever col-lg-3">
-                    <div class="title-content">
-                        <h3>Tak</h3>
-                        <hr />
-                        <div id="tci" class="intro-card">A 3-Dimensional Strategy game by Patrick Rothfuss</div>
-                    </div>
-                    <div class="card-info">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-                    </div>
-                    <div class="gradient-overlay"></div>
-                    <div class="color-overlay"></div>
-                </div>
-            </div>
-        </div>
-    </div>-->
 
 
 </body></html>
