add tutoring page and remove about page. Properly name titles

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
                 <div class="site-nav-wrapper">
                     <a href="#" class="active">Home</a>
-                    <a href="pages/quizdbmobile.html">QuizDB Mobile</a>
+                    <a href="pages/quizdbmobile.html">QuizDB for iOS</a>
                     <a href="pages/tak.html">Tak</a>
+                    <a href="pages/tutoring.html">Tutoring</a>
                     <a href="pages/contact.html">Contact Us</a>
                 </div>
             </nav>
