--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Technaplex" />
-    <title>Technaplex | Home</title>
+    <title>Technaplex | Privacy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!--CSS styles -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -35,8 +35,9 @@
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
                 <div class="site-nav-wrapper">
                     <a href="../index.html">Home</a>
-                    <a href="quizdbmobile.html">QuizDB Mobile</a>
+                    <a href="quizdbmobile.html">QuizDB for iOS</a>
                     <a href="tak.html">Tak</a>
+                    <a href="tutoring.html">Tutoring</a>
                     <a href="contact.html">Contact Us</a>
                 </div>
             </nav>
@@ -44,7 +45,7 @@
         </div>
     </header>
 
-    <div class="section" id="contact">
+    <div class="section" id="content">
         <h2 class="section-header text-center">Privacy Policy</h2>
         <p class="text-left">This privacy notice discloses the privacy practices for Technaplex (Shu and Chervenak Software). This privacy notice applies solely to information collected by this website. It will notify you of the following:</p>
         
