--- a/pages/tak.html
+++ b/pages/tak.html
@@ -47,8 +47,9 @@
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
                 <div class="site-nav-wrapper">
                     <a href="../index.html">Home</a>
-                    <a href="quizdbmobile.html">QuizDB Mobile</a>
+                    <a href="quizdbmobile.html">QuizDB for iOS</a>
                     <a href="#" class="active">Tak</a>
+                    <a href="tutoring.html">Tutoring</a>
                     <a href="contact.html">Contact Us</a>
                 </div>
             </nav>
