--- a/pages/legal.html
+++ b/pages/legal.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Technaplex" />
-    <title>Technaplex | Home</title>
+    <title>Technaplex | Legal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!--CSS styles -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -44,8 +44,9 @@
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
                 <div class="site-nav-wrapper">
                     <a href="../index.html">Home</a>
-                    <a href="quizdbmobile.html">QuizDB Mobile</a>
+                    <a href="quizdbmobile.html">QuizDB for iOS</a>
                     <a href="tak.html">Tak</a>
+                    <a href="tutoring.html">Tutoring</a>
                     <a href="contact.html">Contact Us</a>
                 </div>
             </nav>
@@ -53,7 +54,7 @@
         </div>
     </header>
 
-    <div class="section" id="contact">
+    <div class="section" id="content">
         <h2><strong>Terms and Conditions</strong></h2>
 
         <p class="text-left">Welcome to Technaplex!</p>
