fix navbar tutoring link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a href="#" class="active">Home</a>
                     <a href="pages/quizdbmobile.html">QuizDB for iOS</a>
                     <a href="pages/tak.html">Tak</a>
-                    <a href="pages/tutoring.html">Tutoring</a>
+                    <a href="/tutoring.html">Tutoring</a>
                     <a href="pages/contact.html">Contact Us</a>
                 </div>
             </nav>
