--- a/pages/legal.html
+++ b/pages/legal.html
@@ -46,7 +46,7 @@
                     <a href="../index.html">Home</a>
                     <a href="quizdbmobile.html">QuizDB for iOS</a>
                     <a href="tak.html">Tak</a>
-                    <a href="tutoring.html">Tutoring</a>
+                    <a href="/tutoring.html">Tutoring</a>
                     <a href="contact.html">Contact Us</a>
                 </div>
             </nav>
