--- a/pages/quizdbmobile.html
+++ b/pages/quizdbmobile.html
@@ -48,7 +48,7 @@
                     <a href="../index.html">Home</a>
                     <a href="#" class="active">QuizDB for iOS</a>
                     <a href="tak.html">Tak</a>
-                    <a href="tutoring.html">Tutoring</a>
+                    <a href="/tutoring.html">Tutoring</a>
                     <a href="contact.html">Contact Us</a>
                 </div>
             </nav>
