--- a/pages/contact.html
+++ b/pages/contact.html
@@ -69,7 +69,7 @@
                 <input type="text" id="lname" name="lastname" placeholder="Eg. Smith"><br>
 
                 <label for="email">Email</label><br>
-                <input type="text" id="email" name="email" placeholder="Eg. johnsmith@gmail.com"><br>
+                <input type="email" id="email" name="email" placeholder="Eg. johnsmith@gmail.com"><br>
 
                 <label for="questions"></label>Questions and Comments<br>
                 <textarea id="questions" name="questions" placeholder="What would you like to ask us?" style="height:200px"></textarea><br>
