remove submit alert

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -74,7 +74,7 @@
                 <label for="questions"></label>Questions and Comments<br>
                 <textarea id="questions" name="questions" placeholder="What would you like to ask us?" style="height:200px"></textarea><br>
 
-                <input type="submit" onclick="submitInfo()" value="Submit">
+                <input type="submit" value="Submit"> <!-- onclick="submitInfo()"  -->
             </form>
         </div>
     </div>
