remove extraneous scripts and fix tutoring links

--- a/tutoring.html
+++ b/tutoring.html
@@ -27,11 +27,6 @@
     <!-- JavaScript -->
     <script src="../assets/js/jquery-3.3.1.js"></script>
     <script src="../assets/js/main.js"></script>
-    <script>
-        function submitInfo() {
-            alert("Thank you for your interest!");
-        }
-    </script>
 </head>
 
 <body>
@@ -44,11 +39,11 @@
             <nav id="site-nav">
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
                 <div class="site-nav-wrapper">
-                    <a href="../index.html">Home</a>
-                    <a href="quizdbmobile.html">QuizDB for iOS</a>
-                    <a href="tak.html">Tak</a>
+                    <a href="index.html">Home</a>
+                    <a href="pages/quizdbmobile.html">QuizDB for iOS</a>
+                    <a href="pages/tak.html">Tak</a>
                     <a href="#" class="active">Tutoring</a>
-                    <a href="contact.html">Contact Us</a>
+                    <a href="pages/contact.html">Contact Us</a>
                 </div>
             </nav>
 
