--- a/tutoring.html
+++ b/tutoring.html
@@ -80,7 +80,7 @@
             protocol-oriented programming.
         </p>
         <h3><strong>Interested? Contact Us</strong></h3>
-        <p class="text-left">Please contact <a href="mailto:technaplex@gmail.com">technaplex@gmail.com</a> for individual or group lesson pricing information.
+        <p class="text-left">Please contact us at <a target="_blank" href="https://mailhide.io/e/yFTXf">t......@gmail.com</a> for individual or group lesson pricing information.
             We are flexible in scheduling the date and time of lessons.
         </p>
     </div>
