remove tak stuff, add flashcard adder

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,9 +46,8 @@
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
                 <div class="site-nav-wrapper">
                     <a href="../index.html">Home</a>
-                    <a href="quizdbmobile.html">QuizDB for iOS</a>
-                    <a href="tak.html">Tak</a>
-                    <a href="/tutoring.html">Tutoring</a>
+                    <a href="https://quizdbmobile.technaplex.com">QuizDB for iOS</a>
+                    <a href="https://flashcard.technaplex.com">Flashcard Adder</a>
                     <a href="#" class="active">Contact Us</a>
                 </div>
             </nav>
