--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="utf-8" />
@@ -64,9 +64,8 @@
                 <a href="#" class="menu-icon"><i class="fas fa-bars"></i></a>
                 <div class="site-nav-wrapper">
                     <a href="#" class="active">Home</a>
-                    <a href="pages/quizdbmobile.html">QuizDB for iOS</a>
-                    <a href="pages/tak.html">Tak</a>
-                    <a href="/tutoring.html">Tutoring</a>
+                    <a href="https://quizdbmobile.technaplex.com">QuizDB for iOS</a>
+                    <a href="https://flashcard.technaplex.com">Flashcard Adder</a>
                     <a href="pages/contact.html">Contact Us</a>
                 </div>
             </nav>
@@ -83,14 +82,14 @@
 
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <h3 class="app-title text-center"><a href="pages/quizdbmobile.html" class="text-muted text-center">QuizDB</a></h3>
-                        <a href="pages/quizdbmobile.html" class="text-muted text-center"><img class="app-image" src="/assets/quizdb.png" alt="QuizDB for iOS" height="150" width="150"></a>
+                        <h3 class="app-title text-center"><a href="https://quizdbmobile.technaplex.com" class="text-muted text-center">QuizDB</a></h3>
+                        <a href="https://quizdbmobile.technaplex.com" class="text-muted text-center"><img class="app-image" src="/assets/quizdb.png" alt="QuizDB for iOS" height="150" width="150"></a>
                         <p class="text-muted text-center">An innovative mobile client for the QuizDB searchable question database.</p>
                     </div>
                     <div class="col-md-4">
-                        <h3 class="app-title text-center"><a href="pages/tak.html" class="text-muted text-center">Tak</a></h3>
-                        <a href="pages/tak.html" class="text-muted text-center"><img class="app-image" src="/assets/tak.png" alt="Tak for iOS" height="150" width="150"></a>
-                        <p class="text-muted">A 3D mobile edition of Tak, the strategy game created by James Ernest and Patrick Rothfuss. Currently unreleased due to licensing concerns.</p>
+                        <h3 class="app-title text-center"><a href="https://flashcard.technaplex.com" class="text-muted text-center">Flashcard Adder</a></h3>
+                        <a href="https://flashcard.technaplex.com" class="text-muted text-center"><img class="app-image" src="/assets/flashcard.png" alt="Flashcard Adder for iOS" height="150" width="150"></a>
+                        <p class="text-muted">Flashcard Adder is a dedicated tool for adding flashcards into the AnkiMobile app</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="app-title text-center">Saga Reader</h3>
@@ -115,8 +114,8 @@
 
                 </div>
             </div>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;© 2018-2019 Technaplex</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;© 2018-2020 Technaplex</p>
         </section>
-
+    </div>
 
 </body></html>
