fix privacy policy formatting problems and typos

--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -47,7 +47,7 @@
 
     <div class="section" id="content">
         <h2 class="section-header text-center">Privacy Policy</h2>
-        <p>This privacy notice discloses the privacy practices
+        <p class="text-left">This privacy notice discloses the privacy practices
         for Technaplex (Shu and Chervenak Software). This privacy notice applies
         solely to information collected by this website. Information collected
         by our apps can be found on their respective web sites.</p>        
@@ -67,7 +67,7 @@
         spent on those pages, and other statistics.
         </p>
 
-        <h3>Log Data</h3>
+        <h3>Cookies</h3>
         <p class="text-left">
             Cookies are files with small amount of data that is commonly used an
             anonymous unique identifier. These are sent to your browser from the
