--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="col-md-4">
                         <h3 class="app-title text-center"><a href="https://flashcard.technaplex.com" class="text-muted text-center">Flashcard Adder</a></h3>
                         <a href="https://flashcard.technaplex.com" class="text-muted text-center"><img class="app-image" src="/assets/flashcard.png" alt="Flashcard Adder for iOS" height="150" width="150"></a>
-                        <p class="text-muted">Flashcard Adder is a dedicated tool for adding flashcards into the AnkiMobile app</p>
+                        <p class="text-muted">Flashcard Adder is a dedicated tool for adding flashcards into the AnkiMobile app.</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="app-title text-center">Saga Reader</h3>
